2011-06-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-save-secrets): New variable to control if
	secret tokens should be saved encrypted.
	(auth-source-netrc-parse, auth-source-netrc-search): Pass the file name
	to `auth-source-netrc-normalize'.
	(with-auth-source-epa-overrides): Add convenience macro.
	(auth-source-epa-make-gpg-token): Convert text to a "gpg:" token.
	(auth-source-netrc-normalize): Convert "gpg:" tokens back to text in
	the lexical-let closure.
	(auth-source-netrc-create): Create "gpg:" tokens according to
	`auth-source-save-secrets'.

2011-06-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-update-group): Add new argument
	`info-unchanged' that stops updating dribble buffer.

	* gnus-start.el (gnus-dribble-enter): Add new argument `regexp' that
	deletes lines matching to it in dribble buffer.

	* gnus-agent.el (gnus-agent-fetch-group-1):
	* gnus-group.el (gnus-group-update-group-line, gnus-group-make-group):
	* gnus-srvr.el (gnus-server-update-server, gnus-server-set-info):
	* gnus-start.el (gnus-group-change-level):
	* gnus-sum.el (gnus-summary-move-article): Delete old dribble entry.

	* gnus-sum.el (gnus-summary-update-info): Don't update dribble buffer
	if newsgroup info is not changed.

	* gnus-group.el (gnus-group-get-new-news-this-group):
	* gnus-sum.el (gnus-summary-read-group-1, gnus-summary-exit-no-update):
	Don't update dribble buffer.

2011-06-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-remove-ignored): New function to
	remove entries with groups we ignore.

2011-05-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-rescale-image): Add an :ascent of 100 to images so that
	the underline comes at the bottom.

2011-05-31  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-article-marks-to-chars): Rename from
	`gnus-registry-user-format-function-M' and declare the latter obsolete.